[tool.poetry]
name = "linkedin-bot"
version = "0.1.0"
description = "Bot to manage account activity."
authors = ["fenya-rq <fenyochek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.3"
ruff = "0.11.5"
pytest = "8.3.5"
beautifulsoup4 = "4.13.3"
playwright = "1.51.0"
httpx = "0.28.1"
python-dotenv = "1.1.0"
asyncio = "3.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
mypy = "1.15.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", ".nox", ".venv", ".env", "build", "dist"]

[tool.ruff]
fix-only = true
line-length = 100
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
exclude = [".venv", "files", "parser.log", "example*.py"]
quote-style = "single"

[tool.ruff.lint]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107"
]
select = ["E4", "E7", "E9", "F", "D", "I", "PTH", "PD"]
extend-select = ["TID252"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
